# vaporworld

./: CMakeLists.txt
shaders/: shader.frag  shader.vert  shaderC.frag  shaderC.vert  shaderL.frag  shaderL.vert  shaderT.frag  shaderT.geom  shaderT.vert
src/: CMakeLists.txt
src/light/: CMakeLists.txt  main.cpp
src/light/shaders/default/: .comp  .frag  .geom  .vert
src/light/shaders/deferred/: .comp  .frag  .vert
src/light/shaders/generation/: .comp
src/light/shaders/include/: vertex.glsl
src/light/shaders/march/: gen.comp  march.comp
src/light/shaders/volume/: .comp  gen.comp
src/sgl/: CMakeLists.txt  main.cpp  main_old.cpp
src/sgl/private/game/: importer.cpp
src/sgl/private/world/: world.cpp  world_block.cpp
src/sgl/public/containers/: binary_tree.h  linked_list.h  map.h  pair.h  queue.h
src/sgl/public/game/: importer.h  mesh.h
src/sgl/public/gldrv/unix/: gl_unix.h
src/sgl/public/hal/: thread_manager.h
src/sgl/public/math/: quat_simd.h
src/sgl/public/world/: vertex.h  world.h  world_block.h
